Update .env variables

--- a/.env
+++ b/.env
@@ -8,14 +8,25 @@ MYSQL_PASSWORD=wordpress
 # phpMyAdmin
 PMA_PORT=8181
 
+# Nginx
+NGINX_PORT=8000
+
+#PHP
+PHP_VERSION=8.4
+
 # WordPress
 WP_VERSION=6.7-php8.4
 WP_PORT=8000
 WP_PLUGIN_NAME=ct-core
 WP_THEME_NAME=ct-theme
+WP_URL=http://localhost:8000
+WP_TITLE="Example Site"
+WP_LOGIN=admin
+WP_PASSWORD=admin
+WP_EMAIL=admin@example.com
 
 # Composer
-CMP_VERSION=2.8.6
+COMPOSER_VERSION=2.8.6
 
 # Node
-ND_VERSION=22.14.0
+NODE_VERSION=22.14.0
