--- a/.env
+++ b/.env
@@ -15,8 +15,7 @@ NGINX_PORT=8000
 PHP_VERSION=8.4
 
 # WordPress
-WP_VERSION=6.7-php8.4
-WP_PORT=8000
+WP_VERSION=6.7
 WP_PLUGIN_NAME=ct-core
 WP_THEME_NAME=ct-theme
 WP_URL=http://localhost:8000
